--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,13 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 # directory of Emscripten.
 include_directories("$ENV{EMSCRIPTEN_ROOT}/emscripten/1.35.0/system/include/emscripten/")
 
-add_library(barista2 api.h api.cpp html.h html.cpp)
+add_library(libbarista2 api.h api.cpp html.h html.cpp)
 
 add_executable(main main.cpp)
-target_link_libraries(main barista2)
+target_link_libraries(main libbarista2)
 
-add_executable(unittests test.cpp)
-target_link_libraries(unittests barista2)
+add_library(libtest test.h test.cpp)
+target_link_libraries(libtest libbarista2)
+
+add_executable(unittests test_all.cpp)
+target_link_libraries(unittests libbarista2 libtest)
